# Zygisk-Il2CppDumper-FF-ESP-LINE

./: .gitignore
.github/workflows/: build.yml
FF_ESP_Panel/: .gitignore  CMakeLists.txt  build.bat  compile.bat
FF_ESP_Panel/android/: Android.mk  hook.cpp  readmem.c
FF_ESP_Panel/src/: esp.cpp  esp.h  il2cpp_offsets.h  main.cpp  memory.cpp  memory.h  offsets.h  overlay.cpp  overlay.h  structs.h  w2s.cpp  w2s.h
extracted/: module.prop
